--- a/CSS/style.css
+++ b/CSS/style.css
@@ -44,7 +44,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0rem 7%;
+    padding: 0rem 8.5%;
     border-bottom: var(--border);
     position: fixed;
     height: 10rem;
@@ -63,17 +63,29 @@
     cursor: pointer;
   }
   section{
-    padding: 5rem;
+    padding:5rem 13rem;
+  }
+  .heading{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    padding-bottom: 3.5rem;
+    font-size: 4rem;
+  }
+  .heading span{
+    color:var(--main-color);
+    text-transform: uppercase;
   }
   .container{
     margin: auto;
-    width: 1250px;
+    width: 1259px;
   }
 .btn:hover{
     letter-spacing: 0.1rem;
 }
   .header .logo img{
     height: 11rem;
+    margin-left: -3rem;
   }
   .header .navbar a{
         margin: 0 1rem;
@@ -184,7 +196,7 @@
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url('../ASSETS/coffee-background.jpg') no-repeat;
+    background: url('../ASSETS/coffee_image-background.png') no-repeat;
     background-size: cover;
     background-position: center;
 
@@ -200,11 +212,310 @@
 }
 .home .content p{
     font-size: 2rem;
-    font-weight: lighter;
+    font-weight:300;
     line-height: 1.8;
     padding: 1rem 0;
     color: #eee;
 }
+
+.about .row{
+    display: flex;
+    align-items: center;
+    background: var(--black);
+    flex-wrap: wrap;
+
+}
+
+.about .row .image{
+    flex: 1 1 45rem;
+
+}
+.about .row .image img{
+    width: 100%;
+    
+}
+.about .row .content{
+    flex: 1 1 45rem;
+    padding: 2rem;
+}
+.about .row .content h3{
+    font-size: 3rem;
+    color: #fff;
+}
+.about .row .content p{
+    font-size: 1.6rem;
+    color: #ccc;
+    padding: 2rem 0;
+    line-height: 2.8rem;
+}
+
+.menu .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+.menu .box-container .box{
+    padding: 5rem;
+    text-align: center;
+    border: var(--border);
+}
+.menu .box-container .box img{
+    height: 15rem;
+    width: 15rem;
+    border-radius: 50%;
+}
+.menu .box-container .box h3{
+    color: #ffff;
+    font-size: 2rem;
+    padding: 0.8rem 0;
+    font-weight: 300;
+}
+.menu .box-container .box .price{
+    color: #ffff;
+    font-size: 2rem;
+    font-weight: 300;
+    
+}
+.menu .box-container .box .price span{
+    /* color: #ffff; */
+    font-size: 1.5rem;
+    text-decoration: line-through;
+    /* padding: 1rem 0; */
+}
+.menu .box-container .box:hover{
+    background:#fff;
+}
+.menu .box-container .box:hover > *{
+    color:var(--black);
+} 
+
+.products .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+.products .box-container .box{
+    text-align: center;
+    border: var(--border);
+    padding: 2rem;
+}
+.products .box-container .box .icons a{
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    font-size: 2rem;
+    border: var(--border);
+    color: #fff;
+    margin: .3rem;
+}
+.products .box-container .box .icons a:hover{
+    background: var(--main-color);
+}
+.products .box-container .box .image img{
+    width: 25rem;
+    height: 25rem;
+}
+.products .box-container .box .content h3{
+    color: #fff;
+    font-size: 2.5rem;
+    font-weight: 300
+}
+.products .box-container .box .content .stars{
+    padding: .6rem;
+}
+.products .box-container .box .content .stars i{
+    font-size: 1.7rem;
+    color: var(--main-color);
+}
+.products .box-container .box .content .price{
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 300;
+}
+.products .box-container .box .content .price span{
+    text-decoration: line-through;
+    font-size: 1.5rem;
+    font-weight: lighter;
+}
+
+.review .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+.review .box-container .box{
+    border: var(--border);
+    text-align: center;
+    padding: 3rem 2rem;
+}
+.review .box-container .box .quote{
+    color: var(--main-color);
+    font-size: 4rem;
+}
+.review .box-container .box p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 2rem 0;
+}
+.review .box-container .box .user{
+    height: 7rem;
+    width: 7rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.review .box-container .box h3{
+    font-size: 2rem;
+    padding: 1rem 0;
+    color: #fff;
+}
+.review .box-container .box .stars i{
+    font-size: 1.5rem;
+    color: var(--main-color);
+}
+
+.contact .row{
+    display: flex;
+    align-items: center;
+    background: var(--black);
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.contact .row .map{
+    flex: 1 1 45rem;
+    width: 100%;
+    object-fit: cover;
+    height: 46rem;
+}
+.contact .row form{
+    flex: 1 1 45rem;
+    padding: 5rem 2rem;
+    text-align: center;
+
+}
+.contact .row form h3{
+    text-transform: uppercase;
+    font-size: 3.5rem;
+    color: #fff;
+}
+.contact .row form .inputBox{
+    display: flex;
+    align-items: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    background: var(--bg);
+    border: var(--border);
+}
+.contact .row form .inputBox span{
+    color: #fff;
+    font-size: 2rem;
+    padding-left: 2rem;
+}
+.contact .row form .inputBox input{
+    width: 100%;
+    padding: 2rem;
+    font-size: 1.7rem;
+    color: #fff;
+    text-transform: none;
+    background: none;
+
+}
+
+.blogs .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
+.blogs .box-container .box{
+    border: var(--border);
+
+}
+.blogs .box-container .box .image{
+    height: 25rem;
+    overflow: hidden;
+    width: 100%;
+}
+.blogs .box-container .box .image img{
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+.blogs .box-container .box:hover .image img{
+    transform: scale(1.2);
+}
+.blogs .box-container .box .content{
+    padding: 2rem;
+}
+.blogs .box-container .box .content .title{
+    font-size: 2.5rem;
+    line-height: 1.5;
+    color: #fff;
+    font-weight: 400;
+}
+.blogs .box-container .box .content .title:hover{
+    color: var(--main-color);
+}
+.blogs .box-container .box .content span{
+    color: var(--main-color);
+    display: block;
+    padding: 1rem;
+    font-size: 2rem;
+}
+.blogs .box-container .box .content p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 1rem 0;
+
+}
+
+.footer{
+    background: var(--black);
+    text-align: center;
+}
+.footer .share{
+    padding: 1rem 0;
+}
+.footer .share a{
+   height: 5rem ;
+   width:5rem;
+   line-height: 5rem;
+   font-size: 1.8rem;
+   color: #fff;
+   border: var(--border);
+   border-radius: 50%;
+   margin-right: 2rem;
+}
+.footer .share a:hover{
+    background-color: var(--main-color);
+}
+.footer .links{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.footer .links a{
+    padding: .7rem 1rem;
+    color: #fff;
+    
+    font-size: 1.8rem;
+}
+.footer .links a:hover{
+    color: var(--main-color);
+}
+.footer .credit{
+    font-size: 1.4rem;
+    color: #fff;
+    padding: 1rem;
+    font-weight: 300;
+}
+
+
+
+
+
+
 
 
 /* media queries */
@@ -223,9 +534,17 @@
     #menu-btn{
         display:block;
     }
+    section{
+        padding: 2rem;
+    }
+    .contact .row .map{
+        height: 25rem;
+    }
+
     .icons{
-        display: flex;
+    display: flex;
     gap: 1rem;
+    justify-content: center;
     }
     .header .navbar{
         position: absolute;
@@ -248,6 +567,12 @@
     .header .search-form{
         width: 90%;
         right: 2rem;
+    }
+    .home{
+        padding-top: 15rem;
+    }
+    .home .content h3{
+        font-size: 4rem;
     }
   
 
